fix vertical-align of fb button

--- a/css/style.less
+++ b/css/style.less
@@ -117,6 +117,7 @@ header {
     li {
         display: inline-block;
         line-height: 1;
+        vertical-align: top;
 
         a {
             display: inline;
